--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,4 @@
 body {
-  max-width: 500px;
-  right: 0;
-  left: 0;
-  position: absolute;
   margin: auto;
   font-size: 16px;
   font-weight: 400;
@@ -11,7 +7,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: #fff;
-  /*position: relative;*/
+  position: relative;
 }
 
 * {
